fix issues with files

--- a/audio_exploration.ipynb
+++ b/audio_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-06T09:20:43.699599400Z",
@@ -19,13 +19,14 @@
     "import cv2 as cv\n",
     "from sklearn.preprocessing import minmax_scale\n",
     "import emd\n",
+    "import os\n",
     "\n",
     "SIGNAL_SAMPLING = 44_500"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-06T09:11:02.879943300Z",
@@ -61,12 +62,16 @@
     "    plt.show()\n",
     "    \n",
     "def save_audio_plot(signal):\n",
+    "    if not os.path.exists('./audio_results'):\n",
+    "        os.mkdir('./audio_results')\n",
     "    plt.figure()\n",
     "    plt.plot(signal)\n",
     "    plt.savefig('./audio_results/audio')\n",
     "\n",
     "\n",
     "def save_imfs_to_files(imfs):\n",
+    "    if not os.path.exists('./imf_results'):\n",
+    "        os.mkdir('./imf_results')\n",
     "    for imf_index in range(imfs.shape[1]):\n",
     "        imf = imfs[:, imf_index]\n",
     "        plt.figure()\n",
@@ -82,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-06T10:38:43.427858300Z",
@@ -97,28 +102,6 @@
      "text": [
       "audio data loaded, len:  356352\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.94930357e-01,  4.37864521e-05,  2.28244305e-05, ...,\n",
-       "        -8.99866782e-04, -5.77759720e-04,  6.78909122e-01],\n",
-       "       [ 3.61054684e-04,  4.51437156e-05,  3.81533302e-05, ...,\n",
-       "        -8.99827235e-04, -5.77717331e-04,  6.78909136e-01],\n",
-       "       [-4.42944171e-06,  4.52426777e-05,  3.70277694e-05, ...,\n",
-       "        -8.99787664e-04, -5.77674939e-04,  6.78909150e-01],\n",
-       "       ...,\n",
-       "       [-2.78077800e-04, -1.16694329e-04, -5.79103378e-05, ...,\n",
-       "         5.10170448e-04,  5.46197679e-04,  6.80667262e-01],\n",
-       "       [-5.54368173e-04, -1.98513738e-04, -6.15953103e-05, ...,\n",
-       "         5.10162589e-04,  5.46200751e-04,  6.80667261e-01],\n",
-       "       [ 5.98195470e-04, -1.53375393e-04, -5.78101334e-05, ...,\n",
-       "         5.10154705e-04,  5.46203820e-04,  6.80667261e-01]])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -155,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-06T10:18:46.026370600Z",
@@ -182,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-06T10:38:59.627688800Z",
@@ -194,10 +177,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x2846890ad40>"
+       "<matplotlib.colorbar.Colorbar at 0x2a5ebf77f40>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -222,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-06T10:39:02.750101100Z",
@@ -237,7 +220,7 @@
        "((697,), 8.00791011235955)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,13 +228,13 @@
    "source": [
     "spectral_centroids = librosa.feature.spectral_centroid(y=audio, sr=SIGNAL_SAMPLING)[0]\n",
     "centroid_frames = range(len(spectral_centroids))\n",
-    "centroid_times = librosa.frames_to_time(frames, sr=SIGNAL_SAMPLING)\n",
+    "centroid_times = librosa.frames_to_time(centroid_frames, sr=SIGNAL_SAMPLING)\n",
     "centroid_times.shape, centroid_times[-1] # "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +243,7 @@
        "(697,)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-06T10:39:04.121218400Z",
@@ -287,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-06T10:39:05.017922500Z",
@@ -321,10 +304,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2846b0560e0>]"
+       "[<matplotlib.lines.Line2D at 0x2a5f12e1cc0>]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -347,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-04T18:37:33.077743Z",
@@ -359,10 +342,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x2846aacb9d0>"
+       "<matplotlib.collections.QuadMesh at 0x2a5f137efb0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -384,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-06T09:23:47.541757100Z",
@@ -410,12 +393,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "imfs = calculate_imfs(audio)\n",
     "save_imfs_to_files(imfs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_audio_plot(audio)"
    ]
   }
  ],
